--- a/app/src/main/res/layout/safe_activity.xml
+++ b/app/src/main/res/layout/safe_activity.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".screen.safe.SafeActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </FrameLayout>
