--- a/app/src/main/res/layout/web_item.xml
+++ b/app/src/main/res/layout/web_item.xml
@@ -1,29 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="wrap_content"
+    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
+    android:orientation="horizontal"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    tools:ignore="UseCompoundDrawables">
 
-    <TextView
-        android:id="@+id/title"
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="ContentDescription"
+        tools:src="@mipmap/ic_launcher" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dp"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        tools:text="Title" />
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:paddingEnd="8dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="8dp"
+        android:paddingStart="30dp">
 
-    <TextView
-        android:id="@+id/subtitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="?android:textColorSecondary"
-        android:textSize="15sp"
-        tools:text="Subtitle" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="16sp"
+            tools:text="Title" />
+
+        <TextView
+            android:id="@+id/subtitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            android:textColor="?android:textColorSecondary"
+            android:textSize="14sp"
+            tools:text="Subtitle" />
+
+    </LinearLayout>
 
 </LinearLayout>
