--- a/app/src/main/res/layout/web_item.xml
+++ b/app/src/main/res/layout/web_item.xml
@@ -7,28 +7,27 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingBottom="16dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
+    android:padding="12dp"
     tools:ignore="UseCompoundDrawables">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:ignore="ContentDescription"
-        tools:src="@mipmap/ic_launcher" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/circle_back"
+        android:scaleType="center"
+        android:src="@drawable/folder"
+        android:tint="@color/color_accent_light"
+        tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingEnd="8dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="8dp"
-        android:paddingStart="30dp">
+        android:paddingLeft="12dp"
+        android:paddingStart="12dp"
+        tools:ignore="RtlSymmetry">
 
         <TextView
             android:id="@+id/title"
