--- a/app/src/main/res/layout/lock_activity.xml
+++ b/app/src/main/res/layout/lock_activity.xml
@@ -1,7 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingTop="32dp"
+        android:paddingBottom="32dp">
+
+        <ImageView
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:background="@drawable/circle_back"
+            android:scaleType="center"
+            android:src="@drawable/lock" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingTop="12dp"
+            android:paddingBottom="24dp"
+            android:text="@string/enter_keyword"
+            android:textColor="@color/color_grey"
+            android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/keyword_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/oval_back"
+            android:gravity="center"
+            android:inputType="textPassword"
+            android:minWidth="164dp"
+            android:paddingLeft="12dp"
+            android:paddingTop="2dp"
+            android:paddingRight="12dp"
+            android:paddingBottom="2dp"
+            android:textColor="@color/color_grey"
+            android:textSize="20sp"
+            android:typeface="monospace"
+            tools:text="Password" />
+
+        <Button
+            android:id="@+id/unlock_button"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="@string/unlock" />
+
+    </LinearLayout>
+
+</ScrollView>
