--- a/app/src/main/res/layout/input_item.xml
+++ b/app/src/main/res/layout/input_item.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TextInputLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
