--- a/app/src/main/res/layout/input_item.xml
+++ b/app/src/main/res/layout/input_item.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout"
@@ -11,7 +14,11 @@
         <EditText
             android:id="@+id/input"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="18sp"
+            tools:hint="Hint"
+            tools:text="Input" />
 
     </android.support.design.widget.TextInputLayout>
 
