--- a/app/src/main/res/layout/label_item.xml
+++ b/app/src/main/res/layout/label_item.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp">
+    android:padding="14dp">
 
     <TextView
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="?android:textColorPrimary"
-        android:textSize="16sp"
+        android:textColor="@color/color_form_item_hint"
+        android:textSize="14sp"
+        android:textStyle="bold"
         tools:text="Label" />
 
 </FrameLayout>
