--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,13 @@
     <color name="color_grey">#5F6368</color>
     <color name="color_grey_light">#ecedee</color>
 
+    <color name="color_form_background">#F2F2F2</color>
+    <color name="color_form_button_background">#EBEBEB</color>
+    <color name="color_form_button_foreground">#808080</color>
+    <color name="color_form_item_background">#FFFFFF</color>
+    <color name="color_form_item_hint">#BFBFBF</color>
+    <color name="color_form_item_text">#333333</color>
+
     <color name="color_yellow">#EB9736</color>
     <color name="color_yellow_light">#FEEFC3</color>
     <color name="color_pink">#B64A8E</color>
