Fix form items paddings

--- a/app/src/main/res/layout/input_item.xml
+++ b/app/src/main/res/layout/input_item.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:padding="22dp"
+        android:paddingLeft="14dp"
+        android:paddingTop="22dp"
+        android:paddingRight="14dp"
+        android:paddingBottom="22dp"
         android:textColor="@color/color_form_item_text"
         android:textColorHint="@color/color_form_item_hint"
         android:textSize="16sp"
