--- a/app/src/main/res/layout/header_item.xml
+++ b/app/src/main/res/layout/header_item.xml
@@ -6,12 +6,12 @@
     android:padding="14dp">
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/color_form_item_hint"
         android:textSize="14sp"
         android:textStyle="bold"
-        tools:text="Label" />
+        tools:text="Header" />
 
 </FrameLayout>
