--- a/app/src/main/res/layout/safe_activity.xml
+++ b/app/src/main/res/layout/safe_activity.xml
@@ -9,7 +9,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingTop="?attr/actionBarSize" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/create_button"
@@ -21,5 +22,9 @@
         android:focusable="true"
         android:src="@drawable/plus"
         app:fabSize="normal" />
+
+    <include layout="@layout/toolbar" />
+
+    <include layout="@layout/shadow_toolbar" />
 
 </FrameLayout>
