--- a/app/src/main/res/layout/password_item.xml
+++ b/app/src/main/res/layout/password_item.xml
@@ -9,15 +9,7 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
-    <com.tomclaw.nimpas.util.ItemImageView
-        android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:scaleType="center"
-        android:src="@drawable/key"
-        tools:background="@drawable/circle_back"
-        tools:ignore="ContentDescription"
-        tools:tint="@color/color_accent_light" />
+    <include layout="@layout/circle_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
