--- a/app/src/main/res/layout/action_item.xml
+++ b/app/src/main/res/layout/action_item.xml
@@ -9,23 +9,7 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
-    <FrameLayout
-        android:id="@+id/circle"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/circle_back">
-
-        <com.caverock.androidsvg.SVGImageView
-            android:id="@+id/icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:tint="@color/color_grey_light"
-            tools:ignore="ContentDescription"
-            tools:src="@drawable/folder"
-            tools:tint="@android:color/white" />
-
-    </FrameLayout>
+    <include layout="@layout/circle_icon" />
 
     <TextView
         android:id="@+id/title"
