--- a/app/src/main/res/layout/circle_icon.xml
+++ b/app/src/main/res/layout/circle_icon.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/circle_back">
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/image"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_gravity="center"
