--- a/app/src/main/res/layout/text_item.xml
+++ b/app/src/main/res/layout/text_item.xml
@@ -1,21 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/color_form_item_background">
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
         android:paddingLeft="14dp"
         android:paddingTop="22dp"
         android:paddingRight="14dp"
         android:paddingBottom="22dp"
-        android:textColor="@color/color_form_item_text"
+        android:textColor="@color/color_form_item_hint"
         android:textSize="16sp"
-        tools:text="Text" />
+        tools:text="Hint" />
 
-</FrameLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/head"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="14dp"
+            android:paddingTop="14dp"
+            android:paddingRight="14dp"
+            android:paddingBottom="0dp"
+            android:textColor="@color/color_form_item_head"
+            android:textSize="12sp"
+            tools:text="Text" />
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="14dp"
+            android:paddingTop="0dp"
+            android:paddingRight="14dp"
+            android:paddingBottom="14dp"
+            android:textColor="@color/color_form_item_text"
+            android:textSize="16sp"
+            tools:text="Text" />
+
+    </LinearLayout>
+
+</ViewSwitcher>
