--- a/app/src/main/res/layout/safe_activity.xml
+++ b/app/src/main/res/layout/safe_activity.xml
@@ -12,16 +12,23 @@
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/create_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:src="@drawable/plus"
-        app:fabSize="normal" />
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/create_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/plus"
+            app:fabSize="normal" />
+
+    </android.support.design.widget.CoordinatorLayout>
 
     <include layout="@layout/toolbar" />
 
