--- a/app/src/main/res/layout/lock_activity.xml
+++ b/app/src/main/res/layout/lock_activity.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <include layout="@layout/toolbar" />
 
@@ -11,7 +11,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?actionBarSize">
+        android:layout_marginTop="?actionBarSize"
+        android:fillViewport="true">
 
         <LinearLayout
             android:id="@+id/form_container"
@@ -19,50 +20,51 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-            android:paddingTop="32dp"
-            android:paddingBottom="32dp">
-
-            <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:background="@drawable/circle_back"
-                android:scaleType="center"
-                android:src="@drawable/lock" />
+            android:paddingLeft="16dp"
+            android:paddingTop="24dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="16dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:paddingTop="12dp"
-                android:paddingBottom="24dp"
-                android:text="@string/enter_keyword"
-                android:textColor="@color/color_grey"
-                android:textSize="14sp" />
+                android:paddingBottom="2dp"
+                android:text="@string/password"
+                android:textColor="@color/color_form_item_head"
+                android:textSize="12sp" />
 
             <EditText
                 android:id="@+id/keyword_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/oval_back"
-                android:gravity="center"
+                android:background="@null"
+                android:fontFamily="sans-serif-medium"
                 android:inputType="textPassword"
-                android:minWidth="164dp"
-                android:paddingLeft="12dp"
-                android:paddingTop="2dp"
-                android:paddingRight="12dp"
-                android:paddingBottom="2dp"
-                android:textColor="@color/color_grey"
+                android:hint="@string/enter_password"
+                android:textColorHint="@color/color_form_item_hint"
+                android:textColor="@color/color_form_item_text"
                 android:textSize="20sp"
-                android:typeface="monospace"
-                tools:text="Password" />
+                tools:ignore="Autofill,LabelFor" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <Button
                 android:id="@+id/unlock_button"
                 style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="@string/unlock" />
+                android:text="@string/login" />
+
+            <Button
+                android:id="@+id/switch_user_button"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/switch_user" />
 
         </LinearLayout>
 
