Update widgets style according to AndroidX style

--- a/app/src/main/res/layout/book_add_activity.xml
+++ b/app/src/main/res/layout/book_add_activity.xml
@@ -80,9 +80,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/book_add_button"
-                style="@style/Widget.AppCompat.Button.Colored"
+                style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
