--- a/app/src/main/res/layout/button_item.xml
+++ b/app/src/main/res/layout/button_item.xml
@@ -8,9 +8,9 @@
     android:orientation="horizontal"
     android:padding="12dp">
 
-    <androidx.appcompat.widget.AppCompatButton
+    <Button
         android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button.Colored"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Button" />
