Update Buttons style

--- a/app/src/main/res/layout/button_item.xml
+++ b/app/src/main/res/layout/button_item.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="12dp">
+    android:orientation="horizontal">
 
     <Button
         android:id="@+id/button"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="12dp"
         tools:text="Button" />
 
 </LinearLayout>
